--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@chakra-ui/react": "^3.2.1",
     "@emotion/react": "^11.13.5",
+    "clsx": "^2.1.1",
     "next-themes": "^0.4.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
